测试easy ui表格数据

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,17 +1,17 @@
 log4j.rootLogger=DEBUG, console
 
 #console
-log4j.appended.Console= org.apache.log4j.ConsoleAppender
-log4j.appended.Console.layout= org.apache.log4j.PatternLayout
-log4j.appended.Console.layout.ConversionPattern=%d [%t] %-5p [%c] -%m%n 
+#log4j.appended.Console= org.apache.log4j.ConsoleAppender
+#log4j.appended.Console.layout= org.apache.log4j.PatternLayout
+#log4j.appended.Console.layout.ConversionPattern=%d [%t] %-5p [%c] -%m%n 
 
 
-log4j.logger.java.sql.ResultSet=INFO
-log4j.logger.org.apache=INFO 
-log4j.logger.java.sql.Connection=INFO 
-log4j.logger.java.sql.Statement=DEBUG 
-log4j.logger.java.sql.PrepredStatement=DEBUG  
-#log4j.logger.org.mybatis=DEBUG
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n
+#log4j.logger.java.sql.ResultSet=INFO
+#log4j.logger.org.apache=INFO 
+#log4j.logger.java.sql.Connection=INFO 
+#log4j.logger.java.sql.Statement=DEBUG 
+#log4j.logger.java.sql.PrepredStatement=DEBUG  
+log4j.logger.org.mybatis=DEBUG
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n
