修改日志文件

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, console
+#log4j.rootLogger=DEBUG, console
 
 #console
 #log4j.appended.Console= org.apache.log4j.ConsoleAppender
@@ -11,7 +11,56 @@ log4j.rootLogger=DEBUG, console
 #log4j.logger.java.sql.Connection=INFO 
 #log4j.logger.java.sql.Statement=DEBUG 
 #log4j.logger.java.sql.PrepredStatement=DEBUG  
-log4j.logger.org.mybatis=DEBUG
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n
+#log4j.logger.org.mybatis=DEBUG
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n
+
+#----------------------
+##log4j.rootLogger = debug , stdout , D
+
+###  output to the console ###
+##log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+##log4j.appender.stdout.Target = System.out
+##log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern = %d{ABSOLUTE} %5p %c{ 1 }:%L - %m%n
+##log4j.appender.stdout.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n
+#-------------
+
+#log4j.rootLogger=ERROR, stdout
+
+# Dao logging configuration(DEBUG/INFO)
+#log4j.logger.cn.com.easy.core.sql=DEBUG
+
+# Console output
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%5p: [%d{yyyy-MM-dd HH:mm:ss,SSS}] - %c%n%m%n
+#---------------------
+#log4j.rootLogger=ERROR, stdout 
+#log4j.rootLogger=ERROR,stdout
+#log4j.logger.org.mybatis=DEBUG 
+#log4j.appender.stdout.Target=System.out
+#log4j.logger.com.gzd.mapping.E_user=TRACE
+
+#-------------
+#log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Target=System.out
+#log4j.appender.console.layout=org.apache.log4j.PatternLayout
+#log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+
+# Root logger option
+log4j.rootLogger=debug,console
+log4j.logger.com.ibatis=error
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=error
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=error
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=error
+log4j.logger.java.sql.Connection=error
+log4j.logger.java.sql.Statement=error
+log4j.logger.java.sql.PreparedStatement=error
+log4j.logger.java.sql.ResultSet=error
+
+log4j.appender.console=org.apache.log4j.ConsoleAppender 
+log4j.appender.console.layout=org.apache.log4j.PatternLayout 
+log4j.appender.console.layout.ConversionPattern=%5p: [%d{yyyy-MM-dd HH:mm:ss,SSS}] - %c%n%m%n
+
